# EtymTreePython

./: .gitignore  NotAFile.json  README.md  TestLexicon.json  etym_tree_python.py  etymtreepython.py  pytest.ini  requirements.txt  setup.cfg  setup.py  testobject.data
.github/ISSUE_TEMPLATE/: coa-issue-template.md
.github/workflows/: pylint.yml  python-app.yml
src/: main.py
src/configuration/: settings.py
src/core/: change_history.py  change_history_item.py  core.py  lexicon.py  project.py  word.py  wordflow.py
src/services/: change_history_io_service.py  io_service.py  io_service_api.py  lexicon_io_service.py  settings_io_service.py
src/tests/: test_change_history.py  test_component_word_and_changehistory.py  test_core.py  test_deserialiser.py  test_interfaces.py  test_io_service.py  test_lexicon.py  test_project.py  test_project_ui.py  test_serialiser.py  test_settings.py  test_settings_io_service.py  test_splash.py  test_word.py  test_wordflow.py
src/ui/: interfaces.py  project.py  project_ui.py  project_word_details.py  splash.py
tests/: test_ConfigurationManager.py  test_ConfigurationService.py  test_Deserialiser.py  test_IOService.py  test_Settings.py  test_io_service.py  test_serialiser.py  test_settings.py  test_settings_io_service.py
ui/: splash.py
