[metadata]
name = "etym_tree_python"
version = "0.0.0"
license = "GNU GPLv3"
description = "A vocabulary manager for conlangs."
long_description = file: README.md
author = "Jon Crofts"
author_email = "Me@NotAnEmail.com"

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   PyQt5
   pytest
   pytest-mock

[options.packages.find]
where=src